--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     -->
     
     <link rel="stylesheet" href="styles.css">
+    
+    <!-- YouTube Player API (일시정지 기능을 위해 필요) -->
+    <script src="https://www.youtube.com/iframe_api" async></script>
 </head>
 <body>
     <!-- 로딩 화면 -->
