--- a/index.html
+++ b/index.html
@@ -111,11 +111,12 @@
                         <span id="video-time-display">00:00 / 00:00</span>
                     </div>
                     
-                    <!-- 영상 제어 버튼들 -->
-                    <div class="video-controls">
-                        <button id="video-restart-btn" class="btn btn-secondary">처음부터 다시보기</button>
-                        <button id="video-pause-btn" class="btn btn-secondary">일시정지</button>
-                        <button id="video-resume-btn" class="btn btn-secondary" style="display: none;">재생</button>
+                    <!-- 영상 시청 안내 메시지 -->
+                    <div class="video-guide">
+                        <div class="guide-message">
+                            <p>📺 <strong>일정 시청 시간이 지나면 교육 영상 종료 버튼이 나타납니다</strong></p>
+                            <small>영상을 끝까지 시청해주세요</small>
+                        </div>
                     </div>
                 </div>
                 
