--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
         <!-- 5단계: 교육 완료 및 답변 확인 화면 -->
         <div id="completion" class="screen">
             <div class="screen-content">
-                <h2>🎉 교육 완료!</h2>
-                <p>안전교육을 성공적으로 완료하셨습니다.</p>
+                <h2>🎉 행운 당첨 도전!</h2>
+                <p>행운 이벤트 참여하기를 누르세요.</p>
 
                 <div class="completion-content">
                     <!-- 교육 완료 요약 섹션 -->
